# classy-fire

./: .gitignore  LICENSE  README.md  SUPPORT.md  classy_fire.py  evaluate.ipynb  poetry.toml  pyproject.toml  setup.py
.github/workflows/: package_consumption_sanity_check.py  package_publish.yml
classy-fire/: classy_fire.py
classy_fire/: __init__.py  base_classifier.py  llm_classifier.py  mcmc_classifier.py
examples/: fruits.py
