[tool.poetry]
name = "classy_fire"
version = "0.0.1"
description = "Classy-fire is multiclass text classification approach leveraging OpenAI LLM model APIs optimally using clever parameter tuning and prompting."
authors = ["Shay Ben-Elazar <shbenela@microsoft.com>"]

[tool.poetry.dependencies]
python = "~3.9"
langchain = "^0.0.177"
tiktoken = "0.4.0"
openai = "0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"