[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=6.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "classy-fire"
version = "0.1.1"
description = "Classy-fire is multiclass text classification approach leveraging OpenAI LLM model APIs optimally using clever parameter tuning and prompting."
readme = "README.md"
authors = [{ name = "Shay Ben-Elazar", email = "shbenela@microsoft.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["llm", "classification", "machine-learning"]
dependencies = [

]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "tiktoken>=1.0.0", "langchain>=0.0.138", "openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/microsoft/classy-fire"
